# OmniFlow

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
benchmarks/: run_benchmarks.sh
connectors/: anthropic_connector.py  discord_connector.py  filesystem_connector.py  gemini_connector.py  github_connector.py  gitlab_connector.py  http_connector.py  kafka_connector.py  mysql_connector.py  openai_connector.py  postgresql_connector.py  rabbitmq_connector.py  redis_connector.py  telegram_connector.py
core/: engine.go  scheduler.go  workflow.go
core/utils/: config.go  errors.go  helpers.go  plugins.go
docker/: Dockerfile.core  Dockerfile.ui  docker-compose.yml
docs/: api_reference.md  architecture.md  user_guide.md
examples/: docker-compose.yml  example_workflow.yaml
plugins/: CONTRIBUTING.md  README.md
plugins/.github/workflows/: plugins-ci.yml  plugins-release.yml
plugins/c/: Dockerfile  Makefile  README.md  sample_plugin.c
plugins/c/tests/: test_sample_plugin.sh
plugins/common/: plugin-api.md  protocol.md
plugins/common/examples/: example-integration.json  plugin-sandbox-compose.yml
plugins/cpp/: CMakeLists.txt  Dockerfile  Makefile  README.md  sample_plugin.cpp
plugins/cpp/tests/integration/: test_protocol.sh
plugins/cpp/tests/unit/: test_json_parsing.cpp
plugins/examples/: run_all_plugins.sh
plugins/examples/integration/: c-to-python-example.json  js-to-go-example.json
plugins/go/: Dockerfile  Makefile  README.md  go.mod  go.sum  sample_plugin.go
plugins/go/test/: integration_test.sh  plugin_test.go
plugins/javascript/: .eslintrc.json  .prettierrc  Dockerfile  README.md  package-lock.json  package.json  sample_plugin.js
plugins/javascript/tests/: sample_plugin.test.js
plugins/kotlin/: Dockerfile  README.md  build.gradle.kts  sample_plugin.kts
plugins/kotlin/tests/: integration_test.sh  pluginTest.kt
plugins/php/: Dockerfile  README.md  composer.json  sample_plugin.php
plugins/php/tests/: integration_test.sh  phpunit.xml  test_plugin.php
plugins/python/: Dockerfile  README.md  pyproject.toml  requirements.txt  sample_plugin.py
plugins/python/tests/: test_actions.py  test_protocol.py
plugins/ruby/: Dockerfile  Gemfile  README.md  sample_plugin.rb
plugins/ruby/tests/: integration_test.sh  test_plugin.rb
plugins/typescript/: .eslintrc.js  .prettierrc  Dockerfile  README.md  package-lock.json  package.json  sample_plugin.ts  tsconfig.json
plugins/typescript/tests/: sample_plugin.spec.ts
scripts/: deploy.sh  setup_env.sh
ui/: package.json
ui/public/: index.html
ui/src/: App.tsx  utils.ts
ui/src/components/: Dashboard.tsx  LoginForm.tsx  WorkflowEditor.tsx  WorkflowViewer.tsx
ui/src/pages/: Home.tsx  Settings.tsx  Workflows.tsx
ui/src/store/: index.ts  workflowSlice.ts
